Refactor styles for .write elements and enhance moderators block styling
- Updated the SCSS for .write elements to use :has() for better specificity and added common styles.
- Improved the styling for the moderators block, including new layout and hover effects for user links.
- Incremented the version of the Tampermonkey script to 1.0.54.
- Adjusted the anchor-to-button mixin to use a more standard font size.

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -92,7 +92,7 @@
   }
 }
 
-@mixin anchor-to-button($font-size: 1em, $width: fit-content) {
+@mixin anchor-to-button($font-size: 16px, $width: fit-content) {
   @include flex-layout(row, start, center);
   cursor: pointer !important;
   text-decoration: none !important;
