--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,16 +1,14 @@
 // Add avatar mask to make fake border-radius
-@mixin avatar-mask($radius: 4, $dimensions: 32px, $background: transparent) {
+@mixin avatar-mask($radius: 4, $dimensions: 32px, $color: transparent) {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: $dimensions;
   height: $dimensions;
-  background: $background;
-  mask: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32'><rect width='32' height='32' rx='#{$radius}' ry='#{$radius}' fill='black'/></svg>")
-      no-repeat,
-    linear-gradient(#000 0 0);
-  mask-composite: exclude;
+  background-image: url('data:image/svg+xml;utf8,<svg width="100%" height="100%" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"><path fill="#{$color}" d="M24,0l0,24l-24,0l0,-24l24,0Zm-0.944,4.26c0,-1.828 -1.488,-3.316 -3.316,-3.316l-15.48,0c-1.828,0 -3.316,1.488 -3.316,3.316l0,15.48c0,1.828 1.488,3.316 3.316,3.316l15.48,0c1.828,0 3.316,-1.488 3.316,-3.316l0,-15.48Z"/></svg>');
+  background-position: left center;
+  background-size: $dimensions;
 }
 
 // Parameterized mixin for different orientations:
