--- a/src/avatar.scss
+++ b/src/avatar.scss
@@ -8,7 +8,7 @@
   align-items: center;
   width: 120px;
   height: 120px;
-  margin: 35px 15px 15px 15px !important;
+  margin: 40px 0 !important;
   
   .rang {
     position: absolute;
@@ -125,7 +125,6 @@
   .avatar_big {
     width: 100px;
     height: 100px;
-    margin: 30px 12px 12px 12px !important;
     
     .rang {
       font-size: 10px;
@@ -152,7 +151,6 @@
   .avatar_big {
     width: 80px;
     height: 80px;
-    margin: 25px 10px 10px 10px !important;
     
     .rang {
       font-size: 9px;
