--- a/src/race.scss
+++ b/src/race.scss
@@ -503,6 +503,7 @@
               width: 24px !important;
               height: 24px !important;
               margin-right: 5px !important;
+              border-radius: 3px !important;
             }
 
             .top-award {
