--- a/src/vocabularies/vocabulary-comments.scss
+++ b/src/vocabularies/vocabulary-comments.scss
@@ -61,8 +61,9 @@
           width: 32px !important;
           height: 32px !important;
           padding-left: 40px !important;
+
           &::before {
-            @include avatar-mask(4, 32px, $black);
+            @include avatar-mask(32px, $black);
           }
         }
 
