fix: adjust table header width for better responsiveness in posts list

--- a/src/forum/_postsList.scss
+++ b/src/forum/_postsList.scss
@@ -165,6 +165,7 @@
 
           th {
             padding: 10px !important;
+            width: auto !important;
             @include flex-layout(column, start, center);
 
             @media (max-width: 480px) {
