--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -1,4 +1,5 @@
-@import "./data/variables";
+@import "../data/variables";
+@import "gameSettings";
 
 // Main wrapper container
 #content .play-wrapper {
@@ -19,7 +20,7 @@
             padding-left: 262px !important;
             height: 87px !important;
             width: 262px !important;
-            background: $speedPanel no-repeat !important;
+            background: $speedPanel !important;
           }
 
           #speed-label,
@@ -128,9 +129,18 @@
           background: $darkgray !important;
           border: none !important;
 
+          // Race typeblock weird image based corners
+          .tl,
+          .tr,
+          .bl,
+          .br {
+            background: none !important;
+          }
+
           // Race hidden text before the game starts bg color && text color
           #hiddentext {
-            background: icon("eyeOff", $gray) no-repeat center / 45px !important;
+            background: transparent icon("eyeOff", $gray) no-repeat center /
+              contain !important;
             background-color: $darkgray !important;
             border: none !important;
             color: transparent !important;
@@ -249,12 +259,12 @@
             font-size: 0 !important;
             position: absolute !important;
             border: none !important;
-            background: $virtualKeyboard no-repeat center !important;
+            background: $virtualKeyboard;
             color: transparent !important;
             height: 12px;
             width: 26px;
             display: block;
-            transition: filter 0.15s ease-in-out !important;
+            transition: all 0.15s !important;
             animation: keyboard 10s linear infinite !important;
 
             &:hover {
@@ -483,7 +493,7 @@
 
             img {
               box-sizing: border-box !important;
-              background: icon("close", $blue) no-repeat center / 20px !important;
+              background: icon("close", $lightblue) no-repeat center / 20px !important;
               width: 16px !important;
               height: 16px !important;
               padding-left: 16px !important;
@@ -498,13 +508,6 @@
           .name_content {
             overflow: visible !important; // Make award fully visible
             width: 100% !important;
-
-            img[src*="/avatars/"] {
-              width: 24px !important;
-              height: 24px !important;
-              margin-right: 5px !important;
-              border-radius: 3px !important;
-            }
 
             .top-award {
               .numbers {
@@ -527,143 +530,6 @@
         font-size: 12px !important;
         color: $blue !important;
       }
-    }
-  }
-
-  // Right side panel - play-right
-  #play-right {
-    display: flex !important;
-    flex-direction: column !important;
-    gap: 1em !important;
-    position: absolute !important;
-    margin-left: 0 !important;
-    padding: 1em !important;
-    left: 0 !important;
-    transform: translate(0) !important;
-    transition: opacity 1s ease-in-out, 0.3s ease-in-out !important;
-
-    &[style*="margin-right: 0"] #invite {
-      right: 1058px !important;
-    }
-
-    &[style*="position: absolute"] #invite,
-    &[style*="margin-right: -"] #invite {
-      right: 1363px !important;
-    }
-
-    > div.play-right-toggle {
-      background: $gray !important;
-      color: $deepgray !important;
-      transition: all 0.2s !important;
-      top: 325px !important;
-
-      &:hover {
-        background: $blue !important;
-      }
-
-      .glyphicon {
-        top: 0 !important;
-      }
-    }
-
-    // Race advertisement remove
-    #playads {
-      display: none !important;
-    }
-
-    // Race settings panel
-    #params {
-      order: 1 !important;
-      width: 300px !important;
-      background: $black !important;
-      border: 1px solid $gray !important;
-      border-radius: 5px !important;
-      color: $white !important;
-      opacity: 0.2 !important;
-      transition: opacity 0.2s ease-in-out !important;
-
-      &:hover {
-        opacity: 1 !important;
-      }
-
-      // Race settings links styles
-      a {
-        text-decoration: underline !important;
-        border-bottom: none !important;
-      }
-
-      select {
-        margin: 2px !important;
-      }
-
-      .slider {
-        background: $deepgray !important;
-        border: 1px solid $gray !important;
-        border-radius: 10px !important;
-        box-sizing: content-box !important;
-        display: flex !important;
-        align-items: center !important;
-
-        &.off {
-          background: $gray !important;
-          pointer-events: none !important;
-        }
-
-        .handle {
-          background: $gray !important;
-          border-radius: 50% !important;
-          height: 14px !important;
-          width: 14px !important;
-          transition: background 0.2s !important;
-
-          &:hover {
-            background: $lightblue !important;
-          }
-        }
-      }
-    }
-
-    // Invite friends panel
-    #invite {
-      margin: 0 !important;
-      order: 0 !important;
-      width: 300px !important;
-      background: $black !important;
-      border: 1px solid $gray !important;
-      border-radius: 5px !important;
-      color: $white !important;
-      opacity: 0.2 !important;
-      transition: opacity 0.2s ease-in-out !important;
-
-      &:hover {
-        opacity: 1 !important;
-      }
-
-      a {
-        color: $blue !important;
-
-        &:hover {
-          color: $lightblue !important;
-        }
-      }
-
-      #friends-list {
-        background: $darkgray !important;
-        border: none !important;
-      }
-
-      #select-all {
-        border-bottom: none !important;
-        text-decoration: underline !important;
-      }
-    }
-
-    // Invite friends input styles
-    #invite-link {
-      color: $blue !important;
-      border: none !important;
-      border-bottom: 1px solid $gray !important;
-      background: none !important;
     }
   }
 }
@@ -708,16 +574,16 @@
   }
 }
 
-// Slider handle
 #content .handle {
-  background: $gray !important;
+  margin-left: -5px !important;
+  opacity: 0.5 !important;
   border-radius: 50% !important;
   height: 10px !important;
   width: 10px !important;
-  transition: background 0.2s !important;
+  background: $gray !important;
 
   &:hover {
-    background: $lightblue !important;
+    background: $blue !important;
   }
 }
 
@@ -851,6 +717,52 @@ $rotation-snap: cubic-bezier(
 
     &:hover {
       color: $lightblue !important;
+    }
+  }
+
+  // Klavotools statistics panel (external)
+  #spectrumcanvas {
+    background: $deepgray !important;
+    filter: contrast(2) !important;
+  }
+
+  #statistics {
+    width: 270px !important;
+    margin-top: 10px !important;
+    margin-bottom: 0 !important;
+    color: $white !important;
+    background: $darkgray !important;
+    border: 1px solid $gray !important;
+    opacity: 0.7 !important;
+    transition: opacity 0.2s !important;
+
+    &:hover {
+      opacity: 1 !important;
+      transition: opacity 0.2s !important;
+    }
+
+    span {
+      color: $blue !important;
+    }
+  }
+
+  // Klavotools complexity panel (external)
+  #complexity-panel {
+    opacity: 0.7 !important;
+    transition: opacity 0.2s !important;
+
+    &:hover {
+      opacity: 1 !important;
+      transition: opacity 0.2s !important;
+    }
+
+    label {
+      font-size: 10px !important;
+      margin-right: 8px !important;
+    }
+
+    #spectrumCanvas {
+      margin: 10px 0 10px !important;
     }
   }
 }
