--- a/src/race/_gameSettings.scss
+++ b/src/race/_gameSettings.scss
@@ -1,49 +1,85 @@
-// Right side panel - play-right
+// Mixin for collapsible panels that start as icon buttons and expand on hover
+@mixin collapsible-panel(
+  $top: 0,
+  $icon: null,
+  $icon-color: $lightblue,
+  $collapsed-width: 50px,
+  $collapsed-height: 50px,
+  $expanded-width: 300px,
+  $expanded-height: auto,
+  $background: $black,
+  $transition-duration: 0.15s,
+  $content-transition-duration: 0.3s,
+  $content-transition-delay: 0.05s
+) {
+  margin: 0 !important;
+  padding: 0 !important;
+  border-radius: 0 5px 5px 0 !important;
+  color: $white !important;
+  position: absolute !important;
+  top: $top !important;
+  width: $collapsed-width !important;
+  height: $collapsed-height !important;
+  overflow: hidden !important;
+  min-width: unset !important;
+  max-width: unset !important;
+  transition: width $transition-duration ease-in-out,
+    height $transition-duration ease-in-out !important;
+
+  @if $icon {
+    background: $background
+      icon($icon, $icon-color)
+      no-repeat
+      center /
+      24px !important;
+  } @else {
+    background: $background !important;
+  }
+
+  // Hide content by default
+  & * {
+    opacity: 0 !important;
+    transition: opacity $content-transition-duration ease-in-out !important;
+  }
+
+  // Expand on hover
+  &:hover {
+    width: $expanded-width !important;
+    height: $expanded-height !important;
+    background: $background !important;
+
+    & * {
+      opacity: 1 !important;
+      transition: opacity $content-transition-duration ease-in-out
+        $content-transition-delay !important;
+    }
+  }
+}
+
+// Usage example:
 #content {
   .play-wrapper {
     #play-right {
       display: flex !important;
       flex-direction: column !important;
-      gap: 0.5em !important;
       position: absolute !important;
-      margin: 0 !important;
       left: 0 !important;
       z-index: 1000 !important;
       width: 0 !important;
       min-width: 0 !important;
       max-width: 0 !important;
+      margin: 0 !important;
+      padding: 0 !important;
 
       // Race settings panel
       #params {
-        border-radius: 0 5px 5px 0 !important;
-        color: $white !important;
-        position: absolute !important;
-        top: 60px !important;
-        width: 50px !important;
-        height: 50px !important;
-        overflow: hidden !important;
-        min-width: unset !important;
-        max-width: unset !important;
-        transition: width 0.15s ease-in-out, height 0.15s ease-in-out !important;
-        background: $black icon("sliders", $lightblue) no-repeat center / 24px !important;
+        @include collapsible-panel(
+          $top: 60px,
+          $icon: "sliders",
+          $icon-color: $lightblue
+        );
 
-        & * {
-          opacity: 0 !important;
-          transition: opacity 0.3s ease-in-out !important;
-        }
-
-        &:hover {
-          width: 300px !important;
-          height: auto !important;
-          background: $black !important;
-
-          & * {
-            opacity: 1 !important;
-            transition: opacity 0.3s ease-in-out 0.05s !important;
-          }
-        }
-
-        // Race settings links styles
+        // Specific styles for params panel
         a {
           text-decoration: underline !important;
           border-bottom: none !important;
@@ -63,7 +99,6 @@
           &.off {
             background: $gray !important;
             pointer-events: none !important;
-
             .handle {
               display: none !important;
             }
@@ -75,7 +110,6 @@
             height: 14px !important;
             width: 14px !important;
             transition: background 0.15s ease-in-out !important;
-
             &:hover {
               background: $lightgray !important;
             }
@@ -85,22 +119,15 @@
 
       // Invite friends panel
       #invite {
-        margin: 0 !important;
-        width: 300px !important;
-        background: $black !important;
-        border-radius: 0 5px 5px 0 !important;
-        color: $white !important;
-        position: absolute !important;
-        top: 0 !important;
-        width: 50px !important;
-        height: 50px !important;
-        overflow: hidden !important;
-        min-width: unset !important;
-        max-width: unset !important;
+        @include collapsible-panel(
+          $top: 0,
+          $icon: "users",
+          $icon-color: $lightblue
+        );
 
+        // Specific styles for invite panel
         a {
           color: $blue !important;
-
           &:hover {
             color: $lightblue !important;
           }
@@ -115,14 +142,13 @@
           border-bottom: none !important;
           text-decoration: underline !important;
         }
-      }
 
-      // Invite friends input styles
-      #invite-link {
-        color: $blue !important;
-        border: none !important;
-        border-bottom: 1px solid $gray !important;
-        background: none !important;
+        #invite-link {
+          color: $blue !important;
+          border: none !important;
+          border-bottom: 1px solid $gray !important;
+          background: none !important;
+        }
       }
     }
   }
