--- a/src/race/_gameSettings.scss
+++ b/src/race/_gameSettings.scss
@@ -6,7 +6,6 @@
   $collapsed-width: 50px,
   $collapsed-height: 50px,
   $expanded-width: 300px,
-  $expanded-height: auto,
   $background: $black,
   $transition-duration: 0.15s,
   $content-transition-duration: 0.3s,
@@ -45,7 +44,7 @@
   // Expand on hover
   &:hover {
     width: $expanded-width !important;
-    height: $expanded-height !important;
+    height: auto !important;
     background: $background !important;
 
     & * {
@@ -56,7 +55,6 @@
   }
 }
 
-// Usage example:
 #content {
   .play-wrapper {
     #play-right {
